HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/KPMG_Health_Check_Log__c.object-meta.xml
<CustomObject>
    <label>Health Check Log</label>
    <nameField>
        <displayFormat>HCL-{00000000}</displayFormat>
        <label>Health Check Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Check Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>