HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Comments__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>