HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Daily_Health_Check__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Daily_Health_Check__c</fullName>
    <label>Daily Health Check</label>
    <referenceTo>KPMG_Daily_Health_Check__c</referenceTo>
    <relationshipLabel>Health Check Logs</relationshipLabel>
    <relationshipName>Health_Check_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>