HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Details__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>