HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Display_Order__c</fullName>
    <label>Display Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>