HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Image__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Image__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>