HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Is_Detail__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Is_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Detail</label>
    <type>Checkbox</type>
</CustomField>