HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Jira_Reference__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Jira_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Jira Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>