HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Next_Steps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>