HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Parent_Item__c</fullName>
    <description>For detail rows: the summary item label (Sub-Section) this detail belongs to, e.g. &quot;Permission Set Licenses&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>