HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Remaining__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Remaining__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(KPMG_Total__c)), NOT(ISBLANK(KPMG_Used__c))), KPMG_Total__c - KPMG_Used__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>