HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Run_By__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Run_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Run By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>