HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Section__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Section__c</fullName>
    <label>Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud Integrations</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Proactive Monitoring Alerts</fullName>
            </value>
            <value>
                <fullName>System Error Logs</fullName>
            </value>
            <value>
                <fullName>Platform Events</fullName>
            </value>
            <value>
                <fullName>User Licenses</fullName>
            </value>
            <value>
                <fullName>Permission Set Licenses</fullName>
            </value>
            <value>
                <fullName>Scheduled Jobs</fullName>
            </value>
            <value>
                <fullName>AUP Provisioning</fullName>
            </value>
            <value>
                <fullName>SC Health Check</fullName>
            </value>
            <value>
                <fullName>OM Dashboard</fullName>
            </value>
            <value>
                <fullName>WorkBench</fullName>
            </value>
            <value>
                <fullName>Salesforce Trust</fullName>
            </value>
            <value>
                <fullName>Service Accounts</fullName>
            </value>
            <value>
                <fullName>MuleSoft Integration Errors</fullName>
            </value>
            <value>
                <fullName>Cvent Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>