HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Sub_Section__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>