HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Total__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>