HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/fields/KPMG_Used__c.field-meta.xml
<CustomField>
    <fullName>KPMG_Used__c</fullName>
    <label>Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>