HCProject/force-app/main/default/objects/KPMG_Health_Check_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KPMG_Section__c</columns>
    <columns>KPMG_Daily_Health_Check__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>